--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -4,9 +4,9 @@
 
 {% block content %}
     <h1>My Blog</h1>
-    {% for post in posts %}
+    {% for post in page_obj %}
     <h2>
-        <a href="{% url 'blog:post_detail' post.pk %}">
+        <a href="{{post.get_absolute_url}}">
             {{post.title}}
         </a>
     </h2>
@@ -15,4 +15,5 @@
     </p>
     {{post.body|truncatewords:30|linebreaks}}
     {% endfor %}
+    {% include 'pagination.html' with page=page_obj %}
 {% endblock %}
