--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,3 +1,4 @@
+{% load blog_tags %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -13,7 +14,26 @@
     </div>
     <div id="sidebar">
         <h2>My blog</h2>
-        <p>This is my blog.</p>
+        <p>
+            This is my blog.
+            I've written {% total_posts %} posts so far.
+        </p>
+        <p>
+            <a href="{% url 'blog:post_feed' %}">
+                Subscribe to my RSS feed
+            </a>
+        </p>
+        <h3>Latest posts</h3>
+        {% show_latest_posts 3 %}
+        <h3>Most commented posts</h3>
+        {% get_most_commented_posts as most_commented_posts %}
+        <ul>
+            {% for most_commented in most_commented_posts %}
+            <li>
+                <a href="{{most_commented.get_absolute_url}}">{{most_commented.title}}</a>
+            </li>
+            {% endfor %}
+        </ul>
     </div>
 </body>
 </html>
